--- a/assets/style/home/hero.css
+++ b/assets/style/home/hero.css
@@ -237,13 +237,13 @@
 /* Typography */
 .panel-content h2 {
   font-size: 3.5rem;
-  margin-top: 50px;
-  margin-bottom: -80px;
-  margin-left: -160px;
+  margin-top: 20px;
+  margin-bottom: -70px;
+  margin-left: -100px;
   font-weight: 300;
   text-align: left;
-  max-width: 40vw;
-  width: 40vw;
+  max-width: 50vw;
+  width: 50vw;
   line-height: 1.1;
   word-wrap: break-word;
   overflow-wrap: break-word;
@@ -261,7 +261,7 @@
   color: #000;
   padding: 6px 18px;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 20px;
   transition: background 0.2s ease-in-out;
 }
 
@@ -339,7 +339,7 @@
 }
 
 .content-to-show {
-  width: 60%;
+  width: 70%;
   opacity: 0;
   transform: translateY(10px);
   transition: opacity 0.6s ease, transform 0.6s ease;
